Refactored the things